 - Fix for SF bug [2543413] XMLUI Submission forms display validation errors on other fields during add/remove
 - Fix for SF bug [2557654] Search with "%" causes NullPointerException in XMLUI
 - Fix for Jira bug [DS-86] XMLUI Feedback form does not include any protection from spamming

(Kim Shepherd)
 - [2385187] Fix for toDate method in DCDate
 
(Andrea Bollini)
 - S.F. Patch 2645776 for Bug 2645754 SubmissionController is not thread safe
 - [DS-1] Controlled vocab:he URL http://localhost:8080/jspui/subject-search gives internal error and a stack trace in dspace.log
 - [DS-62] Not right encoding for license and extracted texts - ID: 2234532
 - [DS-84] Improve API for "IgnoreAuthorization" blocks - ID: 1687783
 - [DS-58] Double quote problem in some fields of JSPUI (continued) - ID: 2528065
 - [DS-88] Anonymous group don't works as subgroup - ID: 1688445
 - [DS-61] IP Authentication only works on logged in users - ID: 2088431
 
(Paulo Jobim)
 - SF Patch [2655052] Authors re-ordered when item edited (xmlui)

1.5.1 final
===========

(Scott Philips)
- (Scott Phillips) Fixed bug where users could not finish registering nor reset 
  their password because the authentication method signatures were changed.
- Jay Paz (SF#1898241) Additional fixes to patch to enable reuse of methods.
- Added the ability to manage sessions with site wide alerts to prevent users from authenticating.
- Fixes a bug where the ability to edit an item durring workflow step 2 is not displayed.
- Jay Paz (SF#1898241) Add item Export from jspui and xmlui.
- Added easy support for google analytics statistics
- Added the ability for super admins to login as other users. 
- Added an activity viewer to the Control Panel

(Mark Diggory) 
- Fix for SF Bug #2082236 Subscription notification (sub-daily) no emails sent
- [2102580] William Hays: Duplicate Handle exception when replacing bitstreams
- [2102617] Sands Fish: X509Authentication fails to assign appropriate specialgroups