@@ -46,6 +46,8 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.MissingResourceException;
 import java.util.StringTokenizer;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.jsp.JspException;
@@ -66,6 +68,7 @@ import org.dspace.content.Item;
 import org.dspace.core.ConfigurationManager;
 import org.dspace.core.Constants;
 import org.dspace.core.I18nUtil;
+import org.dspace.core.LogManager;
 import org.dspace.core.PluginManager;
 import org.dspace.core.Utils;
 
@@ -80,7 +83,7 @@ import org.dspace.core.Utils;
  * 
  * <PRE>
  * 
- * &lt;schema prefix>.&lt;element&gt;[.&lt;qualifier&gt;|.*][(date)|(link)], ...
+ * &lt;schema prefix&gt;.&lt;element&gt;[.&lt;qualifier&gt;|.*][(date)|(link)], ...
  * 
  * </PRE>
  * 
@@ -90,13 +93,43 @@ import org.dspace.core.Utils;
  * 
  * <PRE>
  * 
- * dc.title = Dublin Core element 'title' (unqualified) dc.title.alternative =
- * DC element 'title', qualifier 'alternative' dc.title.* = All fields with
- * Dublin Core element 'title' (any or no qualifier) dc.identifier.uri(link) =
- * DC identifier.uri, render as a link dc.date.issued(date) = DC date.issued,
- * render as a date
+ * dc.title = Dublin Core element 'title' (unqualified)
+ * dc.title.alternative = DC element 'title', qualifier 'alternative'
+ * dc.title.* = All fields with Dublin Core element 'title' (any or no qualifier)
+ * dc.identifier.uri(link) = DC identifier.uri, render as a link
+ * dc.date.issued(date) = DC date.issued, render as a date
+ * dc.identifier.doi(doi) = DC identifier.doi, render as link to http://dx.doi.org
+ * dc.identifier.hdl(handle) = DC identifier.hanlde, render as link to http://hdl.handle.net
+ * dc.relation.isPartOf(resolver) = DC relation.isPartOf, render as link to the base url of the resolver 
+ *                                  according to the specified urn in the metadata value (doi:xxxx, hdl:xxxxx, 
+ *                                  urn:issn:xxxx, etc.)
  * 
  * </PRE>
+ * 
+ * <P>
+ * When using "resolver" in webui.itemdisplay to render identifiers as resolvable
+ * links, the base URL is taken from <code>webui.resolver.<n>.baseurl</code> 
+ * where <code>webui.resolver.<n>.urn</code> matches the urn specified in the metadata value.
+ * The value is appended to the "baseurl" as is, so the baseurl need to end with slash almost in any case.
+ * If no urn is specified in the value it will be displayed as simple text.
+ * 
+ * <PRE>
+ * 
+ * webui.resolver.1.urn = doi
+ * webui.resolver.1.baseurl = http://dx.doi.org/
+ * webui.resolver.2.urn = hdl
+ * webui.resolver.2.baseurl = http://hdl.handle.net/
+ * 
+ * </PRE>
+ * 
+ * For the doi and hdl urn defaults values are provided, respectively http://dx.doi.org/ and 
+ * http://hdl.handle.net/ are used.<br> 
+ * 
+ * If a metadata value with style: "doi", "handle" or "resolver" matches a URL
+ * already, it is simply rendered as a link with no other manipulation.
+ * </P>
+ * 
+ * <PRE>
  * 
  * <P>
  * If an item has no value for a particular field, it won't be displayed. The
@@ -106,18 +139,18 @@ import org.dspace.core.Utils;
  * 
  * <PRE>
  * 
- * "metadata.&lt;style.&gt;.&lt;field&gt;"
+ * &quot;metadata.&lt;style.&gt;.&lt;field&gt;&quot;
  * 
- * e.g. "metadata.thesis.dc.title" "metadata.thesis.dc.contributor.*"
- * "metadata.thesis.dc.date.issued"
+ * e.g. &quot;metadata.thesis.dc.title&quot; &quot;metadata.thesis.dc.contributor.*&quot;
+ * &quot;metadata.thesis.dc.date.issued&quot;
  * 
  * 
  * if this key is not found will be used the more general one
  * 
- * "metadata.&lt;field&gt;"
+ * &quot;metadata.&lt;field&gt;&quot;
  * 
- * e.g. "metadata.dc.title" "metadata.dc.contributor.*"
- * "metadata.dc.date.issued"
+ * e.g. &quot;metadata.dc.title&quot; &quot;metadata.dc.contributor.*&quot;
+ * &quot;metadata.dc.date.issued&quot;
  * 
  * </PRE>
  * 
@@ -129,12 +162,13 @@ import org.dspace.core.Utils;
  * 
  * plugin.single.org.dspace.app.webui.util.StyleSelection = \
  *                      org.dspace.app.webui.util.CollectionStyleSelection
- *                      #org.dspace.app.webui.util.MetadataStyleSelection                                            
+ *                      #org.dspace.app.webui.util.MetadataStyleSelection
  * 
  * </PRE>
  * 
  * <P>
- * With the Collection strategy you can also specify which collections use which views.
+ * With the Collection strategy you can also specify which collections use which
+ * views.
  * </P>
  * 
  * <PRE>
@@ -154,14 +188,15 @@ import org.dspace.core.Utils;
  * </PRE>
  * 
  * <P>
- * With the Metadata strategy you MUST specify which metadata use as name of the style.
+ * With the Metadata strategy you MUST specify which metadata use as name of the
+ * style.
  * </P>
  * 
  * <PRE>
  * 
  * webui.itemdisplay.metadata-style = schema.element[.qualifier|.*]
  * 
- * e.g. "dc.type"
+ * e.g. &quot;dc.type&quot;
  * 
  * </PRE>
  * 
@@ -170,6 +205,10 @@ import org.dspace.core.Utils;
  */
 public class ItemTag extends TagSupport
 {
+    private static final String HANDLE_DEFAULT_BASEURL = "http://hdl.handle.net/";
+
+    private static final String DOI_DEFAULT_BASEURL = "http://dx.doi.org/";
+
     /** Item to display */
     private Item item;
 
@@ -193,6 +232,12 @@ public class ItemTag extends TagSupport
     /** Hashmap of linked metadata to browse, from dspace.cfg */
     private Map<String,String> linkedMetadata;
     
+    /** Hashmap of urn base url resolver, from dspace.cfg */
+    private Map<String,String> urn2baseurl;
+    
+    /** regex pattern to capture the style of a field, ie <code>schema.element.qualifier(style)</code> */
+    private Pattern fieldStylePatter = Pattern.compile(".*\\((.*)\\)");
+    
     public ItemTag()
     {
         super();
@@ -205,7 +250,30 @@ public class ItemTag extends TagSupport
             String indexName = linkedMetadataSplit[0].trim();
             String metadataName = linkedMetadataSplit[1].trim();
             linkedMetadata.put(indexName, metadataName);
-        }        
+        }
+        
+        urn2baseurl = new HashMap<String, String>();
+
+        String urn;
+        for (int i = 1; null != (urn = ConfigurationManager.getProperty("webui.resolver."+i+".urn")); i++){
+            String baseurl = ConfigurationManager.getProperty("webui.resolver."+i+".baseurl"); 
+            if (baseurl != null){
+            urn2baseurl.put(ConfigurationManager
+                    .getProperty("webui.resolver."+i+".urn"),
+                    baseurl);
+            } else {
+                log.warn("Wrong webui.resolver configuration, you need to specify both webui.resolver.<n>.urn and webui.resolver.<n>.baseurl: missing baseurl for n = "+i);
+            }
+        }
+        
+        // Set sensible default if no config is found for doi & handle
+        if (!urn2baseurl.containsKey("doi")){
+            urn2baseurl.put("doi",DOI_DEFAULT_BASEURL);
+        }
+        
+        if (!urn2baseurl.containsKey("hdl")){
+            urn2baseurl.put("hdl",HANDLE_DEFAULT_BASEURL);
+        }
     }
 
     public int doStartTag() throws JspException
@@ -337,6 +405,14 @@ public class ItemTag extends TagSupport
         	String field = st.nextToken().trim();
             boolean isDate = false;
             boolean isLink = false;
+            boolean isResolver = false;
+            
+            String style = null;
+            Matcher fieldStyleMatcher = fieldStylePatter.matcher(field);
+            if (fieldStyleMatcher.matches()){
+                style = fieldStyleMatcher.group(1);
+            }
+            
             String browseIndex;
             try
             {
@@ -348,19 +424,16 @@ public class ItemTag extends TagSupport
                 browseIndex = null;
             }
 
-            // Find out if the field should rendered as a date or link
+            // Find out if the field should rendered with a particular style
 
-            if (field.indexOf("(date)") > 0)
+            if (style != null)
             {
-                field = field.replaceAll("\\(date\\)", "");
-                isDate = true;
-            }
+                isDate = style.equals("date");
+                isLink = style.equals("link");
+                isResolver = style.equals("resolver") || urn2baseurl.keySet().contains(style);
+                field = field.replaceAll("\\("+style+"\\)", "");
+            } 
 
-            if (field.indexOf("(link)") > 0)
-            {
-                field = field.replaceAll("\\(link\\)", "");
-                isLink = true;
-            }
             // Get the separate schema + element + qualifier
 
             String[] eq = field.split("\\.");
@@ -377,7 +450,7 @@ public class ItemTag extends TagSupport
             }
             // FIXME: Still need to fix for metadata language?
             DCValue[] values = item.getMetadata(schema, element, qualifier, Item.ANY);
-
+            
             if (values.length > 0)
             {
                 out.print("<tr><td class=\"metadataFieldLabel\">");
@@ -418,6 +491,57 @@ public class ItemTag extends TagSupport
 
                         // Parse the date
                         out.print(UIUtil.displayDate(dd, false, false, (HttpServletRequest)pageContext.getRequest()));
+                    }
+                    else if (isResolver)
+                    {
+                        String value = values[j].value;
+                        if (value.startsWith("http://")
+                                || value.startsWith("https://")
+                                || value.startsWith("ftp://")
+                                || value.startsWith("ftps://"))
+                        {
+                            // Already a URL, print as if it was a regular link
+                            out.print("<a href=\"" + value + "\">"
+                                    + Utils.addEntities(value) + "</a>");
+                        }
+                        else
+                        {
+                            String foundUrn = null;
+                            if (!style.equals("resolver"))
+                            {
+                                foundUrn = style;
+                            }
+                            else
+                            {
+                                for (String checkUrn : urn2baseurl.keySet())
+                                {
+                                    if (value.startsWith(checkUrn))
+                                    {
+                                        foundUrn = checkUrn;
+                                    }
+                                }
+                            }
+
+                            if (foundUrn != null)
+                            {
+
+                                if (value.startsWith(foundUrn + ":"))
+                                {
+                                    value = value.substring(foundUrn.length()+1);
+                                }
+
+                                String url = urn2baseurl.get(foundUrn);
+                                out.print("<a href=\"" + url
+                                        + value + "\">"
+                                        + Utils.addEntities(values[j].value)
+                                        + "</a>");
+                            }
+                            else
+                            {
+                                out.print(value);
+                            }
+                        }
+
                     }
                     else if (browseIndex != null)
                     {
