@@ -1103,11 +1103,11 @@ webui.licence_bundle.show = false
 # The name of the field for display will be drawn from the current UI
 # dictionary, using the key:
 #
-# "metadata.<field>"
+# "metadata.<style>.<field>" or if undefined the key "metadata.<field>" 
 #
-# e.g.   "metadata.dc.title"
-#        "metadata.dc.contributor.*"
-#        "metadata.dc.date.issued"
+# e.g.   "metadata.default.dc.title" or "metadata.default.dc.title"
+#        "metadata.dc.contributor.*" or "metadata.default.dc.contributor.*"
+#        "metadata.dc.date.issued" or "metadata.default.dc.date.issued" 
 #
 #webui.itemdisplay.default = dc.title, dc.title.alternative, dc.contributor.*, \
 #                            dc.subject, dc.date.issued(date), dc.publisher, \
@@ -1116,6 +1116,23 @@ webui.licence_bundle.show = false
 #                            dc.identifier.govdoc, dc.identifier.uri(link), \
 #                            dc.identifier.isbn, dc.identifier.issn, \
 #                            dc.identifier.ismn, dc.identifier
+#
+# When using "resolver" in webui.itemdisplay to render identifiers as resolvable
+# links, the base URL is taken from <code>webui.resolver.<n>.baseurl</code> 
+# where <code>webui.resolver.<n>.urn</code> matches the urn specified in the metadata value.
+# The value is appended to the "baseurl" as is, so the baseurl need to end with slash almost in any case.
+# If no urn is specified in the value it will be displayed as simple text.
+#
+#webui.resolver.1.urn = doi
+#webui.resolver.1.baseurl = http://dx.doi.org/
+#webui.resolver.2.urn = hdl
+#webui.resolver.2.baseurl = http://hdl.handle.net/
+#
+# For the doi and hdl urn defaults values are provided, respectively http://dx.doi.org and 
+# http://hdl.handle.net are used.<br> 
+# 
+# If a metadata value with style: "doi", "handle" or "resolver" matches a URL
+# already, it is simply rendered as a link with no other manipulation.
 
 # Specify which strategy use for select the style for an item
 plugin.single.org.dspace.app.webui.util.StyleSelection = \
